[project]
name = "soundtrack_analyzer"
authors = [
    {name = "Adam Pirog"},
    {email = "pirog.adam@gmail.com"},
]
description = "Analyze the soundtrack of your video!"
readme = "README.md"
license = { text="MIT" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7.2,<4.0.0",
    "numpy>=1.24.3,<2.0.0",
    "pandas>=2.0.3,<3.0.0",
    "tqdm>=4.66.1,<5.0.0",
    "python-utils @ git+https://github.com/adampirog/python-utils"
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "pylint"
    ]

[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["soundtrack_analyzer*"]

[tool.setuptools.dynamic]
version = {attr = "soundtrack_analyzer.version.__version__"}

[project.scripts]
soundtrack-analyzer = "soundtrack_analyzer.analyze:cli"
soundtrack-analyzer-summarize = "soundtrack_analyzer.summarize:cli"
soundtrack-analyzer-copy = "soundtrack_analyzer.batch_copy:cli"
soundtrack-analyzer-archive = "soundtrack_analyzer.archive:cli"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
